Add styles for removeButton

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -29,3 +29,17 @@
 .isFavorite {
   color: $color-favorite-card;
 }
+
+.removeButton {
+  background-color: $color-light;
+  border: none;
+  span {
+    font-size: 16px;
+  }
+}
+
+.removeButton:hover {
+  span {
+    font-weight: 600;
+  }
+}
